--- a/Pandas_Merge_Exo.ipynb
+++ b/Pandas_Merge_Exo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,218 +556,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>outgoing_mins_per_month</th>\n",
-       "      <th>outgoing_sms_per_month</th>\n",
-       "      <th>monthly_mb</th>\n",
-       "      <th>use_id</th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>platform</th>\n",
-       "      <th>platform_version</th>\n",
-       "      <th>device</th>\n",
-       "      <th>use_type_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>21.97</td>\n",
-       "      <td>4.82</td>\n",
-       "      <td>1557.33</td>\n",
-       "      <td>22787</td>\n",
-       "      <td>12921</td>\n",
-       "      <td>android</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>GT-I9505</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1710.08</td>\n",
-       "      <td>136.88</td>\n",
-       "      <td>7267.55</td>\n",
-       "      <td>22788</td>\n",
-       "      <td>28714</td>\n",
-       "      <td>android</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>SM-G930F</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1710.08</td>\n",
-       "      <td>136.88</td>\n",
-       "      <td>7267.55</td>\n",
-       "      <td>22789</td>\n",
-       "      <td>28714</td>\n",
-       "      <td>android</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>SM-G930F</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>94.46</td>\n",
-       "      <td>35.17</td>\n",
-       "      <td>519.12</td>\n",
-       "      <td>22790</td>\n",
-       "      <td>29592</td>\n",
-       "      <td>android</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>D2303</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>71.59</td>\n",
-       "      <td>79.26</td>\n",
-       "      <td>1557.33</td>\n",
-       "      <td>22792</td>\n",
-       "      <td>28217</td>\n",
-       "      <td>android</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>SM-G361F</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154</th>\n",
-       "      <td>198.59</td>\n",
-       "      <td>90.49</td>\n",
-       "      <td>5191.12</td>\n",
-       "      <td>23043</td>\n",
-       "      <td>28953</td>\n",
-       "      <td>android</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>SM-G900F</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>155</th>\n",
-       "      <td>198.59</td>\n",
-       "      <td>90.49</td>\n",
-       "      <td>3114.67</td>\n",
-       "      <td>23044</td>\n",
-       "      <td>28953</td>\n",
-       "      <td>android</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>SM-G900F</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>156</th>\n",
-       "      <td>106.65</td>\n",
-       "      <td>82.13</td>\n",
-       "      <td>5191.12</td>\n",
-       "      <td>23046</td>\n",
-       "      <td>29454</td>\n",
-       "      <td>android</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>Moto G (4)</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>157</th>\n",
-       "      <td>344.53</td>\n",
-       "      <td>20.53</td>\n",
-       "      <td>519.12</td>\n",
-       "      <td>23049</td>\n",
-       "      <td>29725</td>\n",
-       "      <td>android</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>SM-G900F</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>158</th>\n",
-       "      <td>42.75</td>\n",
-       "      <td>46.83</td>\n",
-       "      <td>5191.12</td>\n",
-       "      <td>23053</td>\n",
-       "      <td>20257</td>\n",
-       "      <td>android</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>Vodafone Smart ultra 6</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>159 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     outgoing_mins_per_month  outgoing_sms_per_month  monthly_mb  use_id  \\\n",
-       "0                      21.97                    4.82     1557.33   22787   \n",
-       "1                    1710.08                  136.88     7267.55   22788   \n",
-       "2                    1710.08                  136.88     7267.55   22789   \n",
-       "3                      94.46                   35.17      519.12   22790   \n",
-       "4                      71.59                   79.26     1557.33   22792   \n",
-       "..                       ...                     ...         ...     ...   \n",
-       "154                   198.59                   90.49     5191.12   23043   \n",
-       "155                   198.59                   90.49     3114.67   23044   \n",
-       "156                   106.65                   82.13     5191.12   23046   \n",
-       "157                   344.53                   20.53      519.12   23049   \n",
-       "158                    42.75                   46.83     5191.12   23053   \n",
-       "\n",
-       "     user_id platform  platform_version                  device  use_type_id  \n",
-       "0      12921  android               4.3                GT-I9505            1  \n",
-       "1      28714  android               6.0                SM-G930F            1  \n",
-       "2      28714  android               6.0                SM-G930F            1  \n",
-       "3      29592  android               5.1                   D2303            1  \n",
-       "4      28217  android               5.1                SM-G361F            1  \n",
-       "..       ...      ...               ...                     ...          ...  \n",
-       "154    28953  android               6.0                SM-G900F            1  \n",
-       "155    28953  android               6.0                SM-G900F            1  \n",
-       "156    29454  android               6.0              Moto G (4)            1  \n",
-       "157    29725  android               6.0                SM-G900F            1  \n",
-       "158    20257  android               5.1  Vodafone Smart ultra 6            1  \n",
-       "\n",
-       "[159 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "('use_id', 'platform', 'device')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2890\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2891\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2892\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: ('use_id', 'platform', 'device')",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-3bead4c838ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mUusage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mUusage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mUdevice\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'use_id'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'platform'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'device'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mon\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'use_id'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2900\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2901\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2902\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2903\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2904\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2891\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2892\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2893\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2894\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2895\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtolerance\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: ('use_id', 'platform', 'device')"
+     ]
     }
    ],
    "source": [
-    "Uusage.merge(Udevice"
+    "Uusage.merge(Uusage, Udevice['use_id', 'platform', 'device'], on='use_id')"
    ]
   },
   {
