--- a/Data/Pandas/Cut & DateTime.ipynb
+++ b/Data/Pandas/Cut & DateTime.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cut & DateTime"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -226,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +250,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,28 +268,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0        Ado\n",
-       "1      child\n",
-       "2      child\n",
-       "3      child\n",
-       "4      child\n",
+       "0      child\n",
+       "1      Adult\n",
+       "2      Adult\n",
+       "3      Adult\n",
+       "4      Adult\n",
        "       ...  \n",
-       "995      Ado\n",
-       "996      Ado\n",
-       "997      Ado\n",
-       "998    child\n",
-       "999    child\n",
+       "995    child\n",
+       "996    child\n",
+       "997    child\n",
+       "998    Adult\n",
+       "999    Adult\n",
        "Name: Age, Length: 1000, dtype: category\n",
-       "Categories (4, object): ['Senior' < 'Adult' < 'child' < 'Ado']"
+       "Categories (4, object): ['Ado' < 'Senior' < 'Adult' < 'child']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +324,7 @@
        "Categories (2, object): ['A' < 'B']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +362,7 @@
        " 'nineties']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -502,13 +509,267 @@
        "9  2012-02-01 02:48:36   74       Yes  seventies"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date of Arrest      object\n",
+       "Age                  int64\n",
+       "Convicted           object\n",
+       "decade            category\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DoA</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Convicted</th>\n",
+       "      <th>decade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-07-16 14:59:18</td>\n",
+       "      <td>77</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>seventies</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2002-12-19 22:17:59</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>twenties</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1994-06-28 09:31:40</td>\n",
+       "      <td>21</td>\n",
+       "      <td>No</td>\n",
+       "      <td>twenties</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1985-05-14 09:52:17</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>fourties</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1985-05-25 14:06:28</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>thirties</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  DoA  Age Convicted     decade\n",
+       "0 2014-07-16 14:59:18   77       Yes  seventies\n",
+       "1 2002-12-19 22:17:59   28       Yes   twenties\n",
+       "2 1994-06-28 09:31:40   21        No   twenties\n",
+       "3 1985-05-14 09:52:17   45       Yes   fourties\n",
+       "4 1985-05-25 14:06:28   39       Yes   thirties"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.rename(columns={\"Date of Arrest\": 'DoA'}, inplace = True)\n",
+    "\n",
+    "df['DoA'] = pd.to_datetime(df['DoA'])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DoA</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Convicted</th>\n",
+       "      <th>decade</th>\n",
+       "      <th>YoA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-07-16 14:59:18</td>\n",
+       "      <td>77</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>seventies</td>\n",
+       "      <td>2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2002-12-19 22:17:59</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>twenties</td>\n",
+       "      <td>2002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1994-06-28 09:31:40</td>\n",
+       "      <td>21</td>\n",
+       "      <td>No</td>\n",
+       "      <td>twenties</td>\n",
+       "      <td>1994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1985-05-14 09:52:17</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>fourties</td>\n",
+       "      <td>1985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1985-05-25 14:06:28</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>thirties</td>\n",
+       "      <td>1985</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  DoA  Age Convicted     decade   YoA\n",
+       "0 2014-07-16 14:59:18   77       Yes  seventies  2014\n",
+       "1 2002-12-19 22:17:59   28       Yes   twenties  2002\n",
+       "2 1994-06-28 09:31:40   21        No   twenties  1994\n",
+       "3 1985-05-14 09:52:17   45       Yes   fourties  1985\n",
+       "4 1985-05-25 14:06:28   39       Yes   thirties  1985"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['YoA'] = df['DoA'].dt.year\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        tenties\n",
+       "1       zeroties\n",
+       "2       nineties\n",
+       "3      eightties\n",
+       "4      eightties\n",
+       "         ...    \n",
+       "995     nineties\n",
+       "996     nineties\n",
+       "997    eightties\n",
+       "998     nineties\n",
+       "999     nineties\n",
+       "Name: DoA, Length: 1000, dtype: category\n",
+       "Categories (7, object): ['sixties' < 'seventies' < 'eightties' < 'nineties' < 'zeroties' < 'tenties' < 'twenties']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "bins = list(range(1959, 2039, 10))\n",
+    "prefix = ['six', 'seven', 'eight', 'nine', 'zero', 'ten', 'twen']\n",
+    "labels = [p + 'ties' for p in prefix]\n",
+    "\n",
+    "pd.cut(df['DoA'].dt.year, bins = bins, labels = labels)"
    ]
   },
   {
