--- a/MachineLearning/Introduction_optimisation.ipynb
+++ b/MachineLearning/Introduction_optimisation.ipynb
@@ -843,18 +843,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "def d2f3 (x,y) :\n",
-    "    d2f_dxdx = \n",
+    "    d2f_dxdx = 120 * x ** 2 - 40 * y + 2\n",
     "    d2f_dxdy = -40 * x\n",
     "    d2f_dydx = -40 * x\n",
     "    d2f_dydy = 20\n",
     "    # Dérivées partielles d'ordre 2\n",
     "    return [[d2f_dxdx,d2f_dxdy],[d2f_dydx,d2f_dydy]]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valeurs propres de la matrice [[82, -40], [-40, 20]] :\n",
+      "  vp1 = 101.60632371551998\n",
+      "  vp2 = 0.39367628448001923\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# A compléter pour déterminer la nature des points critiques de f2\n",
+    "\n",
+    "# Calcul de la matrice hessienne\n",
+    "matrice1 = d2f3 (1,1)\n",
+    "# Calcul des valeurs propres de la matrice hessienne, puis test de leur signe\n",
+    "valProp = np.linalg.eigvals(matrice1)\n",
+    "print('Valeurs propres de la matrice {} :'.format(matrice1))\n",
+    "print('  vp1 = {}'.format(valProp[0]))\n",
+    "print('  vp2 = {}'.format(valProp[1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<strong> f3 est un point minimum pour 1, 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
