required for data

--- a/MachineLearning/Modele_Lineaire_exo.ipynb
+++ b/MachineLearning/Modele_Lineaire_exo.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -93,7 +93,12 @@
    },
    "outputs": [],
    "source": [
-    "#importer vos librairies \n"
+    "#importer vos librairies \n",
+    "import numpy as np\n",
+    "import math \n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import sklearn.datasets"
    ]
   },
   {
@@ -118,8 +123,66 @@
     "#charger les données \n",
     "#price_availability.csv\n",
     "#listings_final.csv\n",
-    "#vérifier si tous les individus ont bien un prix \n"
+    "#vérifier si tous les individus ont bien un prix \n",
+    "fpPrice = \"\"\n",
+    "fpListing = \"\"\n",
+    "\n",
+    "dataPrice = pd.read_csv(fpPrice)\n",
+    "dataListing = pd.read_csv(fpListing)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataPrice.head(5)\n",
+    "dataListing.head(5)\n",
+    "print('...')\n",
+    "dataPrice.tail(5)\n",
+    "dataListing.tail(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataPrice.shape\n",
+    "dataListing.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dataPrice' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-832a5189ace0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdataPrice\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtypes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'...'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdataListing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtypes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dataPrice' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "dataPrice.dtypes\n",
+    "print('...')\n",
+    "dataListing.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -153,7 +216,9 @@
    "source": [
     "#définir 2 variables de travail\n",
     "#X := les features à utiliser \n",
-    "#Y := la target (prix)\n"
+    "#Y := la target (prix)\n",
+    "def funct(x, y) :\n",
+    "    "
    ]
   },
   {
@@ -467,9 +532,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.8.0 64-bit ('3.8.0': pyenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python38064bit380pyenv9c4c8c45ab8c4cf6b660579dd09669d6"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -481,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
