--- a/MachineLearning/Modele_Lineaire_exo.ipynb
+++ b/MachineLearning/Modele_Lineaire_exo.ipynb
@@ -182,7 +182,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dataPrice[PriceCollumn].isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataListing[ListingColumn].isnull().any()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -217,7 +228,8 @@
     "#définir 2 variables de travail\n",
     "#X := les features à utiliser \n",
     "#Y := la target (prix)\n",
-    "def funct(x, y) :\n",
+    "x = dataListing[column]\n",
+    "y = dataPrice[column]\n",
     "    "
    ]
   },
