Waiting CSV + Doc Scikit

--- a/MachineLearning/Modele_Lineaire_exo.ipynb
+++ b/MachineLearning/Modele_Lineaire_exo.ipynb
@@ -228,9 +228,16 @@
     "#définir 2 variables de travail\n",
     "#X := les features à utiliser \n",
     "#Y := la target (prix)\n",
-    "x = dataListing[column]\n",
-    "y = dataPrice[column]\n",
-    "    "
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "# Créer objet\n",
+    "modeleReg = LinearRegression()\n",
+    "#Créer Y et X\n",
+    "\n",
+    "list_var = data.columns.drop(\"??\")\n",
+    "\n",
+    "y = data.???\n",
+    "x = data[???]"
    ]
   },
   {
