--- a/MachineLearning/Modele_Lineaire_exo.ipynb
+++ b/MachineLearning/Modele_Lineaire_exo.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -235,7 +235,7 @@
        "4            EUR          172           2  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -439,7 +439,7 @@
        "4                    0.90  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -556,7 +556,7 @@
        "4748695            EUR          125           3  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
        "999                   1.00                     1.0  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +888,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,27 +919,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "tnTd7XKdOmu5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        listing_id  local_price\n",
+      "142103        5396          103\n",
+      "6307          7397           95\n",
+      "31081         9342          390\n",
+      "14680        10010          135\n",
+      "158          10270          105\n",
+      "...            ...          ...\n",
+      "1054      28836096          380\n",
+      "71458     28838519           51\n",
+      "13988     28840013          112\n",
+      "20556     28846494          180\n",
+      "4551      28851976          128\n",
+      "\n",
+      "[11749 rows x 2 columns]\n",
+      "     listing_id          type   city                    neighborhood\n",
+      "0      28581061  private_room  Paris               2e arrondissement\n",
+      "1        661961   entire_home  Paris                             NaN\n",
+      "2       1261705  private_room  Paris                             NaN\n",
+      "3       1318834   entire_home  Paris                      République\n",
+      "4       1677091   entire_home  Paris    Buttes-Chaumont - Belleville\n",
+      "..          ...           ...    ...                             ...\n",
+      "995    28335197   entire_home  Paris  Saint Germain des Prés - Odéon\n",
+      "996    28583013   entire_home  Paris                      République\n",
+      "997    28628316   entire_home  Paris               2e arrondissement\n",
+      "998    28792796   entire_home  Paris             Madeleine - Vendôme\n",
+      "999    28682896  private_room  Paris    Buttes-Chaumont - Belleville\n",
+      "\n",
+      "[1000 rows x 4 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "#définir 2 variables de travail\n",
     "#X := les features à utiliser \n",
     "#Y := la target (prix)\n",
     "\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "# Créer objet\n",
-    "modeleReg = LinearRegression()\n",
     "#Créer Y et X\n",
+    "Y = dataPrice[['listing_id', 'local_price']].drop_duplicates(subset='listing_id').sort_values('listing_id')\n",
+    "X = dataListing[['listing_id', 'type', 'city', 'neighborhood']].drop_duplicates(subset='listing_id')\n",
     "\n",
-    "list_var = data.columns.drop(\"??\")\n",
-    "\n",
-    "y = data.???\n",
-    "x = data[???]"
+    "print(Y)\n",
+    "print(X)"
    ]
   },
   {
